--- a/login.html
+++ b/login.html
@@ -31,12 +31,10 @@
                     <div class="col-xl">
                         <form action="" method="post" class='text-left'>
                             <div class="form-group ">
-                                <label for="exampleInputEmail1">Email address</label>
+                                <label for="exampleInputEmail1">Kullanıcı Adı</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter email">
-                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with
-                                    anyone
-                                    else.</small>
+                                    aria-describedby="emailHelp" placeholder="Enter email" required>
+                                <small id="emailHelp" class="form-text text-muted">Gizlilik her şeydir.</small>
                             </div>
                             <div class="form-group">
                                 <label for="exampleInputPassword1">Password</label>
