--- a/login.html
+++ b/login.html
@@ -41,12 +41,9 @@
                                 <input type="password" class="form-control" id="exampleInputPassword1"
                                     placeholder="Password">
                             </div>
-                            <div class="form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                            <div class='d-flex flex-row-reverse width-fill'>
+                                <button type="submit" class="btn btn-primary">Giriş Yap</button>
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
-
                         </form>
                     </div>
                     <div class="col-xl"></div>
