--- a/login.html
+++ b/login.html
@@ -29,17 +29,17 @@
                 <div class="row">
                     <div class="col-xl"></div>
                     <div class="col-xl">
-                        <form action="" method="post" class='text-left'>
+                        <form action="/operate/login.php" method="post" class='text-left'>
                             <div class="form-group ">
-                                <label for="exampleInputEmail1">Kullanıcı Adı</label>
+                                <label for="exampleInputEmail1">E-Mail</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter email" required>
+                                    aria-describedby="emailHelp" placeholder="E-Posta adresinizi giriniz" required autocomplete="off">
                                 <small id="emailHelp" class="form-text text-muted">Gizlilik her şeydir.</small>
                             </div>
                             <div class="form-group">
-                                <label for="exampleInputPassword1">Password</label>
+                                <label for="exampleInputPassword1">Şifre</label>
                                 <input type="password" class="form-control" id="exampleInputPassword1"
-                                    placeholder="Password">
+                                    placeholder="Şifre" required autocomplete="off">
                             </div>
                             <div class='d-flex flex-row-reverse width-fill'>
                                 <button type="submit" class="btn btn-primary">Giriş Yap</button>
